# outbound-feed-monitor

./: .env.example  .gitignore  INSTALL.md  README.md  monitor.py  pyproject.toml  requirements.txt
config/: accounts.example.yaml
core/: __init__.py  feed_classifier.py  gmail_reader.py  jira_manager.py  slack_alerter.py
scheduler/: generate_apps_script.py
skill/: SKILL.md
skill/references/: account-configs.md  feed-types.md  jira-template.md  slack-template.md  user-config.md
